[package]
name = "brainfuck"
version = "0.3.2"
authors = ["LFalch <lucas@wasd.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = ">=2.26, <=2.33", optional = true }

[[bin]]
name = "brainfuck"
doc = false
required-features = ["clap"]
