[package]
name = "brainfuck"
version = "0.3.5"
authors = ["LFalch <lucas@wasd.dk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }

[features]
default = ["clap"]

[[bin]]
name = "brainfuck"
doc = false
required-features = ["clap"]
